# OperonAI

./: README.md  package.json  pnpm-lock.yaml  tsconfig.json
apps/agent-service/: package.json
apps/anomaly-service/: main.py  pyproject.toml
apps/anomaly-service/app/: decider.py
apps/anomaly-service/app/ml/: rate_of_change.py  rolling_window.py  zscore.py
apps/anomaly-service/app/models/: schemas.py
apps/anomaly-service/app/routes/: analyze.py
apps/anomaly-service/app/rules/: error_rate.py  slow_query.py
apps/api-service/: package.json  tsconfig.json
apps/api-service/src/: index.ts
apps/api-service/src/lib/: db.ts  queue.ts  sse.ts
apps/api-service/src/middleware/: auth.ts  rateLimit.ts
apps/api-service/src/routes/: approvals.ts  incidents.ts  internals.ts  organizations.ts  runbooks.ts  stream.ts
apps/ingestion-service/: package.json  vitest.config.ts
apps/ingestion-service/src/: config.ts  index.ts
apps/ingestion-service/src/buffer/: index.ts
apps/ingestion-service/src/forwarder/: index.ts
apps/ingestion-service/src/normalizer/: appLogs.ts  bullmq.ts  index.ts  postgres.ts
apps/ingestion-service/src/plugins/: auth.ts  db.ts  redis.ts
apps/ingestion-service/src/poolers/: bullmq.ts  postgres.ts
apps/ingestion-service/src/routes/: events.ts  logs.ts
apps/ingestion-service/src/schemas/: events.ts  logs.ts
apps/simulator/: package.json  tsconfig.json
apps/web/: components.json  eslint.config.js  next.config.mjs  package.json  postcss.config.mjs  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
examples/: package.json
(+4 files in other folders)
